--- a/src/controlPanel/controlPanelStyle.css
+++ b/src/controlPanel/controlPanelStyle.css
@@ -482,6 +482,12 @@
   pointer-events: none;
 }
 
+.control-show-dummy-server.is-non-clickable {
+  opacity: 0.55;
+  cursor: default;
+  pointer-events: none;
+}
+
 .control-mode-section {
   display: flex;
   flex-direction: column;
@@ -739,10 +745,12 @@
 
 .control-panel.is-portrait .control-start-autobet-btn {
   margin-top: 0;
+  margin-bottom: 12px;
 }
 
 .control-panel.is-portrait .control-toggle {
   margin-top: 12px;
+  margin-bottom: 0;
 }
 
 .control-bet-input-field.is-non-clickable {
