--- a/src/game/gameStyle.css
+++ b/src/game/gameStyle.css
@@ -5,7 +5,7 @@
   border: 1px solid #223845;
   position: relative;
   overflow: hidden;
-  padding: 8px 80px;
+  padding: 0;
   order: 2;
 }
 
@@ -59,6 +59,5 @@
       380px
     );
     padding: 0px;
-    padding-bottom: 4px;
   }
 }
